<resources>
    <string name="app_name">JioMoneySnapbizz</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_billing">Billing</string>
    <string name="title_activity_inventory">Inventory Management</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="title_activity_suppliers_order">Suppliers Order</string>
    <string name="title_activity_generate_coupon">Generate Coupon</string>
    <string name="under_development">Under Development</string>

    <string name="product_name">Product Name</string>
    <string name="mrp">MRP</string>
    <string name="selling_price">Selling Price</string>
    <string name="discount_code">Discount Code</string>
    <string name="discount_percentage">Discount %</string>
    <string name="customer">Customer</string>
    <string name="no">NO</string>
    <string name="my_order">My Order</string>
    <string name="name">Name</string>
    <string name="in_process">IN Process</string>
    <string name="delivery">Delivery</string>
    <string name="cancelled">Canceled</string>

    <!--home-->
    <string name="text_yesterday_business">YESTERDAY\'S BUSINESS</string>
    <string name="text_today_orders">TODAY\'S ORDERS</string>
    <string name="text_inventory_management">INVENTORY MANAGEMENT</string>
    <string name="text_billing">BILLING</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="ur_coupon_has_created">Your coupon has been created.\nIt will be distributed to \nall customers after approval.</string>\

    <!--Order Details-->

    <string name="cust_name">Customer Name        </string>
    <string name="cust_mobile"> Customer Mobile No</string>
    <string name="deliver_time">Deliver Time        </string>
    <string name="cust_address">Customer Address  </string>

    <string name="item_name">Item Name</string>

    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="amount">Amount</string>
    <string name="action">Action</string>
    <string name="accept">Accept</string>

    <string name="modify">Modify</string>

    <string name="rs_symbol">`</string>

</resources>
