<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_orders"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jiomoney.snapbizz.ui.orders.OrdersActivity"
    tools:showIn="@layout/activity_orders">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llMainTittle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6"
                android:background="@color/header_bag"
                android:id="@+id/linearLayouttitle">
                <View
                    android:layout_width="1dp"
                    android:background="@color/color_bg_title"
                    android:layout_height="37dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/purple"
                    android:layout_weight="0.5"/>
                <View
                    android:layout_width="1dp"
                    android:background="@color/color_bg_title"
                    android:layout_height="37dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/my_order"
                    android:textColor="@color/purple"
                    android:layout_weight="1.175"/>
                <View
                    android:layout_width="1dp"
                    android:background="@color/color_bg_title"
                    android:layout_height="37dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_weight="0.8"
                    android:textColor="@color/purple"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <View
                    android:layout_width="1dp"
                    android:background="@color/color_bg_title"
                    android:layout_height="37dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/in_process"
                    android:layout_weight="1.175"
                    android:textColor="@color/purple"
                    android:gravity="center"
                    android:layout_gravity="center"
                    />
                <View
                    android:layout_width="1dp"
                    android:background="@color/color_bg_title"
                    android:layout_height="37dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/purple"
                    android:layout_weight="1.175"/>
                <View
                    android:layout_width="1dp"
                    android:background="@color/color_bg_title"
                    android:layout_height="37dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelled"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/purple"
                    android:layout_weight="1.175"/>
                <View
                    android:layout_width="1dp"
                    android:background="@color/color_bg_title"
                    android:layout_height="37dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:background="@color/color_bg_title"
                android:layout_height="1dp">

            </View>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
