<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jiomoney.snapbizz.ui.home.HomeActivity"
    tools:showIn="@layout/activity_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/color_white"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/color_white"
                android:padding="10dp"
                android:text="Details"
                android:background="@color/color_bg_title"
                android:layout_height="wrap_content" />
        <LinearLayout
            style="@style/style_home_layout"
            android:background="@drawable/home_yesterday_button_selector">
            <ImageView
                style="@style/style_home_layout_image"
                android:src="@drawable/ic_graph" />
            <TextView
                android:id="@+id/yesterday_business_text_view"
                android:layout_width="wrap_content"
                android:text="@string/text_yesterday_business"
                android:textColor="@color/color_white"
                style="@style/style_home_layout_label"
                android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                style="@style/style_home_layout"
                android:background="@color/color_today_order">
                <ImageView
                    style="@style/style_home_layout_image"
                    android:src="@drawable/ic_report" />
                <TextView
                    android:id="@+id/today_order_text_view"
                    android:layout_width="wrap_content"
                    android:text="@string/text_today_orders"
                    style="@style/style_home_layout_label"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                style="@style/style_home_layout"
                android:background="@drawable/home_inventory_button_selector">
                <ImageView
                    style="@style/style_home_layout_image"
                    android:src="@drawable/ic_inventory_mgt" />
                <TextView
                    android:id="@+id/inventory_management_text_view"
                    android:layout_width="wrap_content"
                    android:text="@string/text_inventory_management"
                    style="@style/style_home_layout_label"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                style="@style/style_home_layout"
                android:background="@color/color_billing">
                <ImageView
                    android:src="@drawable/ic_billing"
                    style="@style/style_home_layout_image" />
                <TextView
                    android:id="@+id/billing_text_view"
                    android:layout_width="wrap_content"
                    android:text="@string/text_billing"
                    style="@style/style_home_layout_label"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
