<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/nameLayout"
        android:orientation="horizontal"

        android:weightSum="100">
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/color_bg_title"/>
        <RelativeLayout
            android:id="@+id/itemLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="30"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemNameText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Parle G" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/color_bg_title" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="20"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/removeQtyImage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:background="@drawable/minus" />


                <TextView
                    android:id="@+id/qtyText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"

                    android:gravity="center"
                    android:maxLength="3"
                    android:text="10" />
                <ImageView
                    android:id="@+id/addQtyImage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/qtyText"

                    android:background="@drawable/plus_button" />



            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/color_bg_title" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="15"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/rateText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rate" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/color_bg_title" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="15"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/amountText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/amount" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/color_bg_title" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:gravity="center">


            <TextView
                android:id="@+id/acceptText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/accept" />

            <TextView
                android:id="@+id/modifyText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/acceptText"
                android:gravity="center"
                android:text="@string/modify" />


        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/color_bg_title" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/color_bg_title" />
</LinearLayout>