<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_generate_coupon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jiomoney.snapbizz.ui.inventory.GenerateCouponActivity"
    tools:showIn="@layout/activity_generate_coupon">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:background="@color/color_inventory_management">

        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:src="@drawable/ic_inventory_mgt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="Generate Coupon"
                android:textColor="@color/color_white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="0.02"
                android:padding="10dp"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/product_name_edit_text"
                android:layout_weight="0.08"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mrp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="0.02"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/mrp_edit_text"
                android:layout_weight="0.08"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/selling_price"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="0.02"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/selling_price_edit_text"
                android:layout_weight="0.08"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/discount_code"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="0.02"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/discount_code_edit_text"
                android:layout_weight="0.08"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/discount_percentage"
                android:layout_weight="0.02"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:id="@+id/discount_spinner"
                android:layout_weight="0.08"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:layout_weight="0.02"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:id="@+id/customer_spinner"
                android:layout_weight="0.08"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/submit_button"
                android:text="Submit"
                android:textColor="@color/color_white"
                android:background="@drawable/home_inventory_button_selector"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
